# analysis_of_bank_transactions

./: README.md  pyproject.toml
data/: operations.xls
src/: logger.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_views.py
