[tool.poetry]
name = "analysis-of-bank-transactions"
version = "0.1.0"
description = ""
authors = ["Islam <islamka.1994@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.mypy]
disallow_untyped_defs = true


[tool.black]
line-length = 119


[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
